--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <li id="fadeOut"><strong>.fadeOut</strong></li>
                             </ul>
                         </li>
-                        <li><strong>.addClass</strong></li> <!--see above button alert when clicking-->
+                        <li id="addClass"><strong>.addClass</strong></li> <!--see above button alert when clicking-->
                         <li>
                             Adds Something Somewhere
                             <ul>
