added type=text/javascript to script tags

--- a/ninja2cat.html
+++ b/ninja2cat.html
@@ -5,12 +5,12 @@
         <title>Ninja2Cat</title>
         <meta name="description" content="Ninja Morphs into CAT">
         <link rel="stylesheet" href="ninja2cat-style.css">
-        <script
+        <script type="text/javascript"
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
 </script>
-<script>
+<script type="text/javascript">
     $(document).ready(function(){
         $('img').click(function(){
             // var src = $(this).prop("src");
