--- a/ninjaBGone.html
+++ b/ninjaBGone.html
@@ -5,12 +5,12 @@
         <title>Bye Ninja</title>
         <meta name="description" content="Bye Ninja">
         <link rel="stylesheet" href="ninjaBGone-style.css">
-        <script
+        <script type="text/javascript"
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
 </script>
-<script>
+<script type="text/javascript">
     $(document).ready(function(){
         $('img').click(function(){
             $(this).hide("slow");
