--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
                 background: red;
             }
         </style>
-        <script
+        <script type="text/javascript"
             src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous"></script>
-        <script>
+        <script type="text/javascript">
             $(document).ready(function(){
                 $('input').hide();
                 $('label').hide();
