--- a/color-clicker.html
+++ b/color-clicker.html
@@ -2,7 +2,7 @@
 <html>
    <head>
        <title>The Codingdojo ColorClicker!</title>
-       <script type="text/javascript" src='http://code.jquery.com/jquery-1.10.2.min.js'></script> 
+       <script type="text/javascript" src=''http://code.jquery.com/jquery-1.10.2.min.js''></script> 
        <script type="text/javascript">
           function random_color()
           {
